--- a/POSTER.HTML
+++ b/POSTER.HTML
@@ -123,7 +123,7 @@
 
 <!-- Footer Link -->
 <div class="footer-link">
-    <a href="https://shambhavi08-ctrl.github.io/Portfolio/">HOME PAGE </a>
+    <a href="https://shambhavi08-ctrl.github.io/portfolio.s/">HOME PAGE </a>
 </div>
 </div>
 
