--- a/ccc.html
+++ b/ccc.html
@@ -177,7 +177,7 @@
 
         <!-- Footer Link -->
         <div class="footer-link">
-            <a href="https://shambhavi08-ctrl.github.io/Portfolio/">HOME PAGE</a>
+            <a href="https://shambhavi08-ctrl.github.io/portfolio.s/">HOME PAGE</a>
         </div>
     </div>
 </body>
