--- a/pp.html
+++ b/pp.html
@@ -111,7 +111,7 @@
     </div>
 <!-- Footer Link -->
 <div class="footer-link">
-    <a href="https://shambhavi08-ctrl.github.io/Portfolio/">HOME PAGE </a>
+    <a href="https://shambhavi08-ctrl.github.io/portfolio.s/">HOME PAGE </a>
 </div>
 </div>
 </body>
